--- a/package.json
+++ b/package.json
@@ -6,18 +6,35 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "type-check": "vue-tsc --noEmit",
+    "type:check": "vue-tsc --noEmit",
+    "test": "vitest",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
+    "lint": "eslint . --fix",
+    "lint:check": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jsdom": "^27.0.0",
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/vue": "^8.1.0",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.7.0",
+    "happy-dom": "^20.3.0",
+    "prettier": "^3.8.0",
     "typescript": "~5.9.3",
+    "typescript-eslint": "^8.53.0",
     "vite": "^7.2.4",
+    "vitest": "^4.0.17",
     "vue-tsc": "^3.1.4"
   }
 }
